@@ -353,9 +353,11 @@ INTERMediatorOnPage = {
         bodyNode.insertBefore(backBox, bodyNode.childNodes[0]);
         backBox.style.height = "100%";
         backBox.style.width = "100%";
-        if (INTERMediatorOnPage.isSetDefaultStyle && INTERMediatorOnPage.getIMRootPath !== undefined) {
-            backBox.style.backgroundImage =
-                "url(" + INTERMediatorOnPage.getIMRootPath() + "/themes/default/images/background.gif)";
+        if (INTERMediatorOnPage.defaultBackgroundImage) {
+            if (INTERMediatorOnPage.isSetDefaultStyle && INTERMediatorOnPage.getIMRootPath !== undefined) {
+                backBox.style.backgroundImage =
+                    "url(" + INTERMediatorOnPage.getIMRootPath() + "/themes/default/images/background.gif)";
+            }
         }
         if (INTERMediatorOnPage.defaultBackgroundColor) {
             backBox.style.backgroundColor = INTERMediatorOnPage.defaultBackgroundColor;
