@@ -509,7 +509,7 @@ var Parser = (function (scope) {
                 value = str[0];
             }
         }
-        value = unformat(value);
+        //value = unformat(value);
         return value;
     }
 
