@@ -10,6 +10,10 @@ Please check: https://github.com/INTER-Mediator/INTER-Mediator
 Also the Migration Guide (Japanese) might be informative:
   http://inter-mediator.info/ja/for-developers/migration.html
 
+*** Add to Ver.5.4 lines ***
+- [BUG FIX] INTERMediatorOnPage.defaultBackgroundImage affects as expected.
+- [BUG FIX] String array value for single value operator works fine.
+
 Ver.5.3 (February 21, 2016)
 - Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
   in the Auth_Support directory.
